# api_gateway

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  docker-compose.yml  export_jwt_public_key.sh  generate-kong-config.sh
api-gateway-kong/: kong.yml  kong.yml.template
auth-service-springboot/: .gitignore  hot_loading_dev.sh  pom.xml
auth-service-springboot/src/main/resources/: application.yml
frontend-react/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend-react/docs/: environment-setup.md
frontend-react/src/: App.tsx  routeTree.gen.ts
frontend-react/src/api/: authService.ts  baseApiClient.ts
frontend-react/src/components/auth/: AuthGuard.tsx
frontend-react/src/components/dock/: DockBar.tsx
frontend-react/src/components/pages/User/: UserPage.tsx
frontend-react/src/components/ui/: floating-dock.tsx
frontend-react/src/config/: env.ts
frontend-react/src/context/: AuthContext.tsx
frontend-react/src/hooks/: useAuth.ts
frontend-react/src/routes/: __root.tsx  admin.lazy.tsx  index.lazy.tsx  login.lazy.tsx  organization.lazy.tsx  user.lazy.tsx
frontend-react/src/types/: User.ts  env.d.ts
kong-plugins/jwt-claims-headers/: handler.lua  schema.lua
microservice-fastapi/: pyproject.toml  start_app.sh
microservice-fastapi/app/: main.py
microservice-fastapi/app/configs/: config.py
microservice-fastapi/app/databases/: mongodb.py
microservice-fastapi/app/dependencies/: user_info.py
microservice-fastapi/app/lifespan/: lifespan.py
microservice-fastapi/app/routes/: health_route.py  message_route.py
(+16 files in other folders)
