[project]
name = "microservice-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "openai-agents>=0.2.3",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.13.2",
    "python-jose>=3.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
